--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -37,6 +37,7 @@ go_library(
         "@com_github_opensourceways_community_robot_lib//secret:go_default_library",
         "@com_github_opensourceways_go_gitee//gitee:go_default_library",
         "@com_github_sirupsen_logrus//:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
     ],
 )
 
